src/test/ui/feature-gates/feature-gate-unix_sigpipe.stderr
error[E0658]: the `#[unix_sigpipe]` attribute is an experimental feature
  --> $DIR/feature-gate-unix_sigpipe.rs:3:1
   |
LL | #[unix_sigpipe = "inherit"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #97889 <https://github.com/rust-lang/rust/issues/97889> for more information
   = help: add `#![feature(unix_sigpipe)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
